# sicc

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: classes.py  explained.py  ic11_compare.py  nested_calls.py
scripts/: .gitignore  build_types.py
sicc/: __init__.py  _api.py  _cli.py  _comment.py  _control_flow.py  _core.py  _crc.py  _crc_rev.py  _diagnostic.py  _instructions.py  _stack.py  _state.py  _stationeers.py  _subr.py  _theme.py  _tracing.py  _tree_utils.py  _utils.py  config.py  devices.py  functions.py
sicc/_transforms/: __init__.py  arith.py  basic.py  branch.py  check_defined.py  common_sub_elim.py  consteval.py  control_flow.py  forward_full_block.py  fuse_blocks.py  link_bundles.py  lower.py  move_like.py  offset_arith.py  optimize_mvars.py  predicates.py  regalloc.py  remove_trivial_vars.py  stack.py  utils.py
stationeers_ic10/: _api.py  _core.py  _diagnostic.py  _functions.py  _instructions.py  _theme.py  _tracing.py  _utils.py  functions.py
stationeers_ic10/_transforms/: __init__.py  basic.py  branch.py  check_defined.py  control_flow.py  forward_full_block.py  fuse_blocks.py  label_provenance.py  link_bundles.py  optimize_mvars.py  regalloc.py  remove_trivial_vars.py  utils.py
tests/: conftest.py  test_arith.py  test_block.py  test_crc.py  test_devices.py  test_errs.py  test_examples.py  test_forward_blocks.py  test_function_ptrs.py  test_fuse_blocks.py  test_high_level.py  test_label_as_debug.py  test_link_bundles.py  test_loop.py  test_mvars.py  test_nan.py  test_nested_calls.py  test_raw_asm.py  test_return.py  test_slots.py  test_stack.py  test_subr.py  test_tail_call.py  test_utils.py  test_verbose.py
tests/outputs/: examples.classes.main.out  examples.explained.main.out  examples.ic11_compare.main.out  examples.nested_calls.main.out  sicc._subr.test_subr_in_subr.out  test_arith.test_identiy_arith.out  test_block.test_block_type_promote.out  test_crc.test_crc_append.out  test_devices.test_devices.out  test_devices.test_pins.out  test_errs.test_always_uninit.out  test_forward_blocks.test_forward.out  test_forward_blocks.test_forward_fn.out  test_function_ptrs.test_function_ptr.out  test_fuse_blocks.test_else_only.out  test_fuse_blocks.test_if_else.out  test_fuse_blocks.test_if_only.out  test_high_level.test_cond.out  test_high_level.test_loops.out  test_high_level.test_select.out  test_label_as_debug.test_label_as_debug.out  test_label_as_debug.test_refer_unreachable_label.out  test_link_bundles.test_cond_call.out  test_link_bundles.test_function_ptr.out  test_link_bundles.test_nested_call.out  test_loop.test_loop.out  test_loop.test_range.out  test_loop.test_while.out  test_mvars.test_possible_uninit.out  test_mvars.test_swap.out  test_nan.test_nan.out  test_nested_calls.test_nested_call.out  test_raw_asm.test_asm_block.out  test_return.test_return_type_promotion.out  (+11 more)
