[project]
name = "stationeers-ic10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  #
  "networkx>=3.5",
  "optree>=0.17.0",
  "ordered-set>=4.1.0",
  "rich>=14.0.0",
]

[dependency-groups]
dev = [
  #
  "autoflake>=2.3.1",
  "basedpyright>=1.31.0",
  "black>=25.1.0",
  "ipython>=9.4.0",
  "pyright>=1.1.403",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
treat_all_comments_as_code = true
force_single_line = true
group_by_package = true

[tool.autoflake]
ignore-init-module-imports = true

[tool.pyright]
exclude = [".venv"]
typeCheckingMode = "strict"

reportPrivateUsage = false
reportUnusedParameter = false

reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

reportUnreachable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
