[project]
name = "SICC"
version = "0.1.0"
description = "Stationeers IC10 Compiler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cappa>=0.29.1",
  "networkx>=3.5",
  "optree>=0.17.0",
  "ordered-set>=4.1.0",
  "rich>=14.0.0",
]

[project.scripts]
sicc = "sicc._cli:main"

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sicc"
module-root = ""

[dependency-groups]
dev = [
  "autoflake>=2.3.1",
  "basedpyright>=1.31.0",
  "black>=25.1.0",
  "ipython>=9.4.0",
  "isort>=6.0.1",
  "pyright>=1.1.403",
  "pytest-cov>=6.2.1",
  "pytest>=8.4.1",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
treat_all_comments_as_code = true
force_single_line = true
group_by_package = true
known_first_party = ["sicc", "test_utils"]

[tool.pyright]
exclude = [".venv"]
typeCheckingMode = "strict"

reportPrivateUsage = false
reportUnusedParameter = false

reportUnusedImport = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"

reportUnreachable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
